[gd_scene load_steps=32 format=2]

[ext_resource path="res://Escenas/ElegirPersonaje/ElegirPersonaje.gd" type="Script" id=1]
[ext_resource path="res://Asset/custommenu2.png" type="Texture" id=2]
[ext_resource path="res://Asset/SegundoMenu/idle_menu_custom.png" type="Texture" id=3]
[ext_resource path="res://Asset/PersonalisarPersonaje/head_idle1.png" type="Texture" id=4]
[ext_resource path="res://Escenas/ElegirPersonaje/sorbete1.gd" type="Script" id=5]
[ext_resource path="res://Asset/PersonalisarPersonaje/head_idle2.png" type="Texture" id=6]
[ext_resource path="res://Escenas/ElegirPersonaje/sorbete3.gd" type="Script" id=7]
[ext_resource path="res://Asset/PersonalisarPersonaje/torsoidleplata.png" type="Texture" id=8]
[ext_resource path="res://Escenas/ElegirPersonaje/sorbete6.gd" type="Script" id=9]
[ext_resource path="res://Asset/PersonalisarPersonaje/torsoidleoro.png" type="Texture" id=10]
[ext_resource path="res://Escenas/ElegirPersonaje/sorbete8.gd" type="Script" id=11]
[ext_resource path="res://Asset/PersonalisarPersonaje/piernaplataidle.png" type="Texture" id=12]
[ext_resource path="res://Escenas/ElegirPersonaje/sorbete7.gd" type="Script" id=13]
[ext_resource path="res://Asset/PersonalisarPersonaje/piernasidleoro.png" type="Texture" id=14]
[ext_resource path="res://Escenas/ElegirPersonaje/sorbete9.gd" type="Script" id=15]
[ext_resource path="res://Asset/UI/boton_der.png" type="Texture" id=16]
[ext_resource path="res://Asset/UI/Fuente.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://Asset/menu/musica_menu.ogg" type="AudioStream" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.88177, 11.1705 )

[sub_resource type="CircleShape2D" id=2]
radius = 59.0387

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.34924, 3.79492 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 37.2997
height = 26.4045

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 65.4066, 63.3296 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16.3177, 16.8968 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 60.3876, 102.396 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 18.1822, 27.0292 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 56.3307, 107.441 )

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("Avanzar:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=12]
size = 50
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=13]
size = 21
font_data = ExtResource( 17 )

[node name="ElegirPersonaje" type="Node2D"]
script = ExtResource( 1 )

[node name="Fondo" type="Sprite" parent="."]
position = Vector2( 874.99, 83.2813 )
scale = Vector2( 0.945011, 1.29357 )
texture = ExtResource( 2 )

[node name="bruno" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.756863 )
position = Vector2( 1106, 601.148 )
texture = ExtResource( 3 )

[node name="1" type="Area2D" parent="."]
position = Vector2( 649.398, 206.998 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="1"]
shape = SubResource( 1 )

[node name="2" type="Area2D" parent="."]
position = Vector2( 651.635, 200.795 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="2"]
shape = SubResource( 1 )

[node name="3" type="Area2D" parent="."]
position = Vector2( 648.467, 205.227 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="3"]
shape = SubResource( 1 )

[node name="4" type="Area2D" parent="."]
position = Vector2( 644.076, 223.633 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="4"]
shape = SubResource( 1 )

[node name="5" type="Area2D" parent="."]
position = Vector2( 654.719, 326.832 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="5"]
shape = SubResource( 1 )

[node name="6" type="Area2D" parent="."]
position = Vector2( 648.439, 321.041 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="6"]
shape = SubResource( 1 )

[node name="7" type="Area2D" parent="."]
position = Vector2( 657.972, 475.841 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="7"]
shape = SubResource( 1 )

[node name="8" type="Area2D" parent="."]
position = Vector2( 651.145, 325.917 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="8"]
shape = SubResource( 1 )

[node name="9" type="Area2D" parent="."]
position = Vector2( 652.102, 473.367 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="9"]
shape = SubResource( 1 )

[node name="sorbete1" type="Sprite" parent="."]
position = Vector2( 240.582, 205.234 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="sorbete1"]
position = Vector2( -8.47955, -28.9236 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sorbete1/Area2D"]
shape = SubResource( 2 )

[node name="Area_pocicion" type="Area2D" parent="sorbete1"]
position = Vector2( -5.69006, -23.3499 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sorbete1/Area_pocicion"]
shape = SubResource( 3 )

[node name="sorbete3" type="Sprite" parent="."]
position = Vector2( 365.378, 185.325 )
texture = ExtResource( 6 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="sorbete3"]
position = Vector2( 0.512634, -9.75562 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sorbete3/Area2D"]
shape = SubResource( 4 )

[node name="Area2D2" type="Area2D" parent="sorbete3"]
position = Vector2( 4.72144, -14.472 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sorbete3/Area2D2"]
shape = SubResource( 5 )

[node name="sorbete6" type="Sprite" parent="."]
position = Vector2( 218.047, 334.2 )
texture = ExtResource( 8 )
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="sorbete6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="sorbete6/Area2D"]
position = Vector2( 4.91095, -19.6438 )
shape = SubResource( 6 )

[node name="Area2D2" type="Area2D" parent="sorbete6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="sorbete6/Area2D2"]
shape = SubResource( 7 )

[node name="sorbete8" type="Sprite" parent="."]
position = Vector2( 382.358, 327.241 )
texture = ExtResource( 10 )
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="sorbete8"]
position = Vector2( -18.738, 2.39431 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sorbete8/Area2D"]
position = Vector2( 4.91095, -19.6438 )
shape = SubResource( 6 )

[node name="Area2D2" type="Area2D" parent="sorbete8"]
position = Vector2( -10.1237, -8.58727 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sorbete8/Area2D2"]
position = Vector2( -1.50732, -6.02939 )
shape = SubResource( 7 )

[node name="sorbete7" type="Sprite" parent="."]
position = Vector2( 205.907, 497.384 )
texture = ExtResource( 12 )
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="sorbete7"]
position = Vector2( -15.5083, -10.3389 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sorbete7/Area2D"]
position = Vector2( 27.1322, 10.5514 )
shape = SubResource( 8 )

[node name="Area2D2" type="Area2D" parent="sorbete7"]
position = Vector2( -25.8471, -5.16943 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sorbete7/Area2D2"]
position = Vector2( 34.6688, -4.52203 )
shape = SubResource( 9 )

[node name="sorbete9" type="Sprite" parent="."]
position = Vector2( 356.333, 506.946 )
texture = ExtResource( 14 )
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="sorbete9"]
position = Vector2( -10.3389, -1.29236 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sorbete9/Area2D"]
position = Vector2( 24.1174, -6.02936 )
shape = SubResource( 10 )

[node name="Area2D2" type="Area2D" parent="sorbete9"]
position = Vector2( -24.5547, -2.58472 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sorbete9/Area2D2"]
position = Vector2( 34.6688, -4.52203 )
shape = SubResource( 9 )

[node name="Avanzar" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 786.43
margin_top = 387.159
margin_right = 1262.43
margin_bottom = 801.159
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/boton = SubResource( 11 )

[node name="Titulo" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 421.662
margin_top = 24.6913
margin_right = 1002.66
margin_bottom = 121.691
custom_fonts/font = SubResource( 12 )
text = "¡CREÁ TU PERSONAJE!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReproductorMusica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -9.087

[node name="Label" type="Label" parent="."]
margin_left = 489.0
margin_top = 70.0
margin_right = 939.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 13 )
text = "DESLIZÁ LAS PARTES QUE ELIJAS HACIA LA SILUETA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="sorbete1/Area2D" to="sorbete1" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="sorbete1/Area_pocicion" to="sorbete1" method="_on_Area_pocicion_area_entered"]
[connection signal="input_event" from="sorbete3/Area2D" to="sorbete3" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="sorbete3/Area2D2" to="sorbete3" method="_on_Area2D2_area_entered"]
[connection signal="input_event" from="sorbete6/Area2D" to="sorbete6" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="sorbete6/Area2D2" to="sorbete6" method="_on_Area2D2_area_entered"]
[connection signal="input_event" from="sorbete8/Area2D" to="sorbete8" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="sorbete8/Area2D2" to="sorbete8" method="_on_Area2D2_area_entered"]
[connection signal="input_event" from="sorbete7/Area2D" to="sorbete7" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="sorbete7/Area2D2" to="sorbete7" method="_on_Area2D2_area_entered"]
[connection signal="input_event" from="sorbete9/Area2D" to="sorbete9" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="sorbete9/Area2D2" to="sorbete9" method="_on_Area2D2_area_entered"]
[connection signal="pressed" from="Avanzar" to="." method="_on_Avanzar_pressed"]
